--- a/partials/headerWithoutSlide.html
+++ b/partials/headerWithoutSlide.html
@@ -4,7 +4,7 @@
       <!-- Header-Top-Bar  -->
       <div class="container d-flex justify-content-start align-items-start my-header">
          <a href="index.html">
-            <img src="Resources/myImages/logo.png" alt="Logo" class="my-logo">
+            <img src="Resources/myImages/logo.jpg" alt="Logo" class="my-logo">
          </a>
          <form action="" class="d-inline-block my-form">
             <div class="search row my-row">
@@ -53,22 +53,7 @@
             </li>
             <li class="my-parent-2">
                <a href="sanpham.html">SẢN PHẨM <span></span></a>
-               <div class="my-dropdow">
-                  <ul>
-                     <li>
-                        <a href="sanpham.html" class="li2">ĐIỆN THOẠI</a>
-                     </li>
-                     <li>
-                        <a href="sanpham.html" class="li2">LAPTOP</a>
-                     </li>
-                     <li>
-                        <a href="sanpham.html" class="li2">TABLET</a>
-                     </li>
-                     <li>
-                        <a href="sanpham.html" class="li2">SMART WATCH</a>
-                     </li>
-                  </ul>
-               </div>
+               
             </li>
             <!-- <li class="my-parent-2">
                <a href="sanpham.html">PHỤ KIỆN</a>
