--- a/partials/footer.html
+++ b/partials/footer.html
@@ -100,7 +100,7 @@
 
 <!--Địa chỉ-->
 <div class="my-footer">
-   <p class="my-dia-chi"><span>Địa chỉ văn phòng:</span> Khu phố 6, Phường Linh Trung, Quận Thủ Đức, TP.Hồ Chí
+   <p class="my-dia-chi"><span>Địa chỉ văn phòng:</span> 25/3D đường 2, phường Tam Bình, TP. Thủ Đức, TP. Hồ Chí
       Minh.
    </p>
    <p class="my-dia-chi mb-3">Nhận đặt hàng trực tuyến và giao hàng tận nơi, chưa hỗ trợ mua và nhận hàng trực
@@ -109,9 +109,9 @@
       văn phòng hoặc trung tâm xử lý đơn hàng.</p>
    <div class="row">
       <div class="col-6 pr-0">
-         <p style="color: #ffffff !important;" class="my-copy">© 2020 Design by <a href="javascript:void(0)"
+         <p style="color: #ffffff !important;" class="my-copy">© 2022 Design by <a href="javascript:void(0)"
                target="=_blank" style="color: #ff0000 !important;">
-               Huỳnh Ngọc Sơn </a></p>
+               3H Group </a></p>
       </div>
       <div class="col-6 pr-0">
          <div>
