--- a/partials/headerWithSlide.html
+++ b/partials/headerWithSlide.html
@@ -33,12 +33,12 @@
             <a href="giohang.html" class="ml-5 my-header-right-item my-giohang my-lg">
                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                Giỏ hàng
-               <span class="badge badge-danger my-no">4</span>
+               <span class="badge badge-danger my-no"></span>
             </a>
             <a href="giohang.html" class="ml-2 my-header-right-item my-giohang my-sm my-res-a"
                style="margin-right: 15px;margin-top:20px;">
                <i class="fa fa-cart-arrow-down" aria-hidden="true" style="right:5px;"></i>
-               <span class="badge badge-danger my-no">4</span>
+               <span class="badge badge-danger my-no"></span>
             </a>
          </div>
       </div>
@@ -53,7 +53,7 @@
             </li>
             <li class="my-parent-2">
                <a href="sanpham.html">SẢN PHẨM <span></span></a>
-               
+
             </li>
             <!-- <li class="my-parent-2">
                <a href="sanpham.html">PHỤ KIỆN</a>
